--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ nav ul li a:hover {
 
 section {
     padding: 2rem;
-    background-color: #322c2c;
+    background-color: #b1adad;
     margin: 20px 0;
 
 }
